KYLIN-1096 Deprecate minicluster