@@ -621,51 +621,6 @@
 
     <profiles>
         <profile>
-            <id>minicluster</id>
-            <activation>
-                <activeByDefault>false</activeByDefault>
-            </activation>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-surefire-plugin</artifactId>
-                        <version>2.16</version>
-                        <configuration>
-                            <reportsDirectory>${project.basedir}/../target/surefire-reports</reportsDirectory>
-                            <excludes>
-                                <!--Build cube/II need to be run separately-->
-                                <exclude>**/BuildCube*.java</exclude>
-                                <exclude>**/BuildII*.java</exclude>
-
-                                <!--minicluster does not have kafka-->
-                                <exclude>**/ITKafka*.java</exclude>
-
-                                <!--minicluster does not have hive-->
-                                <exclude>**/ITSnapshotManagerTest.java</exclude>
-                                <exclude>**/ITHiveTableReaderTest.java</exclude>
-                                <exclude>**/ITTableControllerTest.java</exclude>
-
-                            </excludes>
-                            <systemProperties>
-                                <property>
-                                    <name>useSandbox</name>
-                                    <value>false</value>
-                                </property>
-                                <property>
-                                    <name>buildCubeUsingProvidedData</name>
-                                    <value>false</value>
-                                </property>
-                            </systemProperties>
-                            <argLine>-Xms1G -Xmx4G -XX:PermSize=128M -XX:MaxPermSize=512M</argLine>
-                        </configuration>
-                    </plugin>
-
-                </plugins>
-            </build>
-        </profile>
-
-        <profile>
             <id>sandbox</id>
             <activation>
                 <activeByDefault>true</activeByDefault>
